# tfpWebOutput

./: .gitignore  CMakeLists.txt  readme.md
include/wor/: worExport.h  worWr.h
src/: dummy.cpp
src/wor/: CMakeLists.txt  worExport.cpp  worFiles.cpp  worFiles.h  worProcess.cpp  worWr.h  worWrFamily.cpp  worWrIndividual.cpp  worWrNames.cpp
src/wor/worfiles/: fam.css  ind.css  livery.css  makeFiles.bat  timage.css  tlist.css  worFiles.f2c  xmenu.css
utils/wor/: CMakeLists.txt  runWor.cpp
